--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-icons-kit": "^2.0.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.5"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
-},
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
