--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-icons-kit": "^2.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
